--- a/.github/workflows/module1.yml
+++ b/.github/workflows/module1.yml
@@ -14,6 +14,15 @@ jobs:
           profile: minimal
           components: clippy, rustfmt
           override: true
-      - name: Run clippy
+      - name: format
+        run: make format
+        working-directory: module1
+      - name: clippy
         run: make lint
+        working-directory: module1
+      - name: test
+        run: make test
+        working-directory: module1
+      - name: release
+        run: make release
         working-directory: module1
